--- a/app/static/style.css
+++ b/app/static/style.css
@@ -196,7 +196,7 @@ body {
   position: fixed;
   z-index: 1000;
   inset: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: #00000099;
   justify-content: center;
   align-items: center;
 }
@@ -411,14 +411,14 @@ body {
 
 .btn-nav:last-child {
   background: linear-gradient(135deg, #111, #202020);
-  border-color: #ff00ff66;
-  color: #ff00ff;
+  border-color: #008cff55;
+  color: #008cff55;
 }
 
 .btn-nav:last-child:hover {
-  background: linear-gradient(135deg, #ff00ff22, #0a0a0a);
+  background: linear-gradient(135deg, #008cff55, #0a0a0a);
   color: #fff;
-  box-shadow: 0 0 12px #ff00ff88;
+  box-shadow: 0 0 12px #008cff55;
 }
 
 /* Category */
@@ -461,6 +461,110 @@ body {
   margin-top: 10px;
 }
 
+/* Search results */
+.search-results {
+  max-width: 700px;
+  margin: 30px auto;
+  background: #121212;
+  padding: 20px;
+  border-radius: 10px;
+  color: #f0f0f0;
+}
+
+.search-header {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+}
+
+.search-header span {
+  color: #00acee;
+}
+
+.tabs {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.tab-btn {
+  padding: 10px 20px;
+  border: none;
+  background: #1e1e1e;
+  color: #aaa;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: all 0.3s ease;
+}
+
+.tab-btn.active {
+  background: #00acee;
+  color: #fff;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
+}
+
+.user-card, .post-card {
+  display: flex;
+  align-items: flex-start;
+  gap: 15px;
+  padding: 10px;
+  margin-bottom: 15px;
+  background: #1a1a1a;
+  border-radius: 8px;
+  transition: background 0.3s ease;
+}
+
+.user-card:hover, .post-card:hover {
+  background: #242424;
+}
+
+.user-card .avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.user-info h4 {
+  margin: 0;
+  color: #fff;
+}
+
+.user-info a {
+  color: #00acee;
+  font-size: 0.9rem;
+}
+
+.post-card h4 a {
+  color: #00acee;
+  text-decoration: none;
+}
+
+.post-card p {
+  margin: 5px 0;
+  color: #ccc;
+}
+
+.author {
+  font-size: 0.85rem;
+  color: #aaa;
+}
+
+.no-results {
+  text-align: center;
+  margin-top: 20px;
+  color: #888;
+}
+
+
 
 .flash {
   text-align: center;
@@ -480,7 +584,7 @@ body {
   margin: 60px auto;
   padding: 30px 35px;
   border-radius: 16px;
-  box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
+  /* box-shadow: 0 0 20px #00ffff1a; */
 }
 
 .auth-container h2 {
@@ -635,7 +739,7 @@ form textarea {
 }
 
 .profile-details .bio {
-  color: #555;
+  color: #8c8989;
   margin: 5px 0;
 }
 
@@ -645,7 +749,6 @@ form textarea {
   background-color: #007bff;
   color: #fff;
   border-radius: 5px;
-  text-decoration: none;
   margin-top: 10px;
 }
 
@@ -779,7 +882,7 @@ h2 {
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 1rem;
-  border-bottom: 2px solid #e6ecf0;
+  /* border-bottom: 2px solid #e6ecf0; */
   padding-bottom: 0.5rem;
 }
 
@@ -808,7 +911,22 @@ h2 {
 .author-info {
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
+
+.full-date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.full {
+  font-size: 0.9rem;
+  color: #777;
+  white-space: nowrap;
+}
+
 
 .fullname {
   font-size: 1rem;
@@ -853,14 +971,28 @@ h2 {
   color: #555;
 }
 
-.like-btn, .comment-link {
-  text-decoration: none;
-  color: #333;
+.post-like-comment {
+  display: flex;
+  align-items: center;
+  margin-top: 0.6rem;
+  font-size: 0.9rem;
+  color: #555;
 }
 
-.like-btn:hover, .comment-link:hover {
-  color: #d63031;
+.like-btn.liked {
+  color: red;
+  transform: scale(1);
+  transition: 0.2s ease;
 }
+
+.like-btn {
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+
 
 .view-more {
   text-align: right;
@@ -874,7 +1006,7 @@ h2 {
 }
 
 .view-btn:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 /* --- Post Content --- */
@@ -909,7 +1041,37 @@ h2 {
   color: #536471;
 }
 
-.like-btn {
+.view_post_footer {
+  display: flex;
+  justify-content:left;
+  align-items: center;
+  font-size: 0.9rem;
+  color: #536471;
+  
+}
+
+.view_post_image {
+  display: block;
+  max-width: 50%;
+  height: auto;
+  border-radius: 10px;
+  /* margin: 15px auto; */
+  margin-bottom: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.view_post_video {
+  display: block;
+  max-width: 50%;
+  height: auto;
+  /* margin: 20px auto; */
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+/* .like-btn {
   text-decoration: none;
   color: #e0245e;
   font-weight: 600;
@@ -918,11 +1080,12 @@ h2 {
 
 .like-btn:hover {
   color: #f91880;
-}
+} */
 
 .date {
-  font-size: 0.85rem;
-  color: #657786;
+  position: relative;
+  cursor: default;
+  margin-left: 50px;
 }
 
 /* Modal */
@@ -992,7 +1155,7 @@ h2 {
 }
 
 .comment-body{
-    flex: 1;
+  flex: 1;
 }
 
 .comment-body strong {
@@ -1065,6 +1228,20 @@ button[type="submit"]:hover {
   to { opacity: 1; transform: scale(1); }
 }
 
+.comment-btn {
+  background: none;
+  border: none;
+  color: #adaaaa;
+  cursor: pointer;
+  font-size: 18px;
+  transition: color 0.3s;
+}
+
+.comment-btn:hover {
+  color: #007bff;
+}
+
+
 
 /* Video */
 .post-video {
@@ -1121,10 +1298,19 @@ button[type="submit"]:hover {
 }
 
 .post_image {
-  width: 50%;
+  width: 70%;
   border-radius: 10px;
   margin-top: 10px;
   margin-bottom: 15px;
+}
+
+.video_container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  margin: 25px auto;
 }
 
 .post_video {
@@ -1132,6 +1318,51 @@ button[type="submit"]:hover {
   border-radius: 10px;
   margin-top: 10px;
   margin-bottom: 15px;
+}
+
+.post_video {
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: 0 4px 25px rgba(0, 0, 0, 0.4);
+  background-color: #000;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.video-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  transform: translateX(-250px);
+}
+
+.view_post_video {
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: 0 4px 25px rgba(0, 0, 0, 0.4);
+  background-color: #000;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* The Play Icon Overlay */
+.play-overlay {
+  position: absolute;
+  color: white;
+  font-size: 60px;
+  opacity: 0.8;
+  cursor: pointer;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.play-overlay:hover {
+  opacity: 1;
+  transform: scale(1.1);
+}
+
+/* Hide overlay when playing */
+.video-container.playing .play-overlay {
+  display: none;
 }
 
 /* .post-footer {
@@ -1431,28 +1662,6 @@ form input[type="submit"]:hover {
 
 /* Follow function */
 
-/* .follow_btn, .unfollow_btn {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 8px 18px;
-  border-radius: 20px;
-  cursor: pointer;
-  font-size: 14px;
-  transition: 0.3s;
-}
-
-.follow_btn:hover {
-  background-color: #0056b3;
-}
-
-.unfollow_btn {
-  background-color: #dc3545;
-}
-
-.unfollow_btn:hover {
-  background-color: #a71d2a;
-} */
 
 /* About page */
 .about-container {
@@ -1531,4 +1740,28 @@ form input[type="submit"]:hover {
   border-left: 3px solid #00aaff;
   padding-left: 15px;
   margin-top: 30px;
+}
+
+/* Social media handles */
+.social-media-inline {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 18px;
+  color: #aba8a8;
+}
+
+.social-media-inline span {
+  margin-right: 10px;
+  font-weight: 500;
+}
+
+.social-media-inline a {
+  margin: 0 8px;
+  color: #a5a3a3;
+  font-size: 22px;
+  transition: color 0.3s;
+}
+
+.social-media-inline a:hover {
+  color: #007bff;
 }
