--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -30,5 +30,14 @@
             </p>
         </div>
     </div>
+
+    <div class="social-media-inline">
+        <span>Follow me:</span>
+        <a href="https://x.com/coolguyolakunle" target="_blank" title="X"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://github.com/coolguyolakunle" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/akinmoladun-olakunle-359546222/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://instagram.com/coolguyolakunle" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/+2348163680215" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    </div>
 </div>
 {% endblock %}
