--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -10,6 +10,21 @@
       {{ form.fullname.label }}
       {{ form.fullname(class="form-control") }}
     </div>
+    
+    <div class="form-group">
+      {{ form.dob.label }}
+      {{ form.dob(class="form-control") }}
+    </div>
+
+    <div class="form-group">
+      {{ form.gender.label }}
+      {{ form.gender(class="form-control") }}
+    </div>
+
+    <div class="form-group">
+      {{ form.phone_number.label }}
+      {{ form.phone_number(class="form-control") }}
+    </div>
 
     <div class="form-group">
       {{ form.bio.label }}
