--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,26 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="csrf-token" content="{{ csrf_token() }}">
-    <title>{% if title %} {{title}} {% else %} CoolStack {% endif %}</title>
+    <title>{% if title %} {{ title }} {% else %} CoolStack {% endif %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script defer src="{{ url_for('static', filename='script.js') }}"></script>
-    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico')}}" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Questrial&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css"
-    />
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico')}}" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
+    <div id="flashMessage"></div>
+
     <nav class="navbar" id="navBar">
         <div class="nav-left">
             <a href="{{ url_for('main.home') }}" class="logo">
-                <img src="{{url_for('static', filename='img/Coolstack.png')}}" alt="">
+                <img src="{{ url_for('static', filename='img/Coolstack-light.png') }}" id="logo-light" class="logo-img logo-light">
+                <img src="{{ url_for('static', filename='img/Coolstack-dark.png') }}" id="logo-dark" class="logo-img logo-dark">
             </a>
         </div>
 
@@ -30,7 +26,7 @@
             <a href="{{ url_for('main.home') }}">Home</a>
             {% if current_user.is_authenticated %}
                 <a href="{{ url_for('main.profile') }}">Profile</a>
-                <a href="{{ url_for('main.create_post') }}" id="openCreatePost">Post</a>
+                <a href="#" class="openCreatePostNav">Post</a>
             {% endif %}
             <div class="dropdown">
                 <button class="dropbtn">Categories ▾</button>
@@ -46,8 +42,8 @@
                 </div>
             </div>
             <a href="{{ url_for('main.about') }}">About</a>
+            <a href="{{ url_for('main.settings') }}">Settings</a>
         </div>
-        
 
         <div class="nav-search">
             <form action="{{ url_for('main.search') }}" method="get">
@@ -64,26 +60,65 @@
             {% endif %}
         </div>
 
+        <!-- Hamburger -->
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <!-- Overlay Menu -->
+        <div class="nav-overlay" id="navOverlay">
+            <div class="menu">
+                <a href="{{ url_for('main.home') }}">Home</a>
+                {% if current_user.is_authenticated %}
+                <a href="{{ url_for('main.profile') }}">Profile</a>
+                <a href="#" id="openCreatePostNav">Post</a>
+                {% endif %}
+                <div class="overlay-dropdown">
+                <button class="overlay-dropbtn">Categories ▾</button>
+                    <div class="overlay-dropdown-content">
+                        <a href="{{ url_for('main.category_page', category_name='Technology') }}">Technology</a>
+                        <a href="{{ url_for('main.category_page', category_name='Lifestyle') }}">Lifestyle</a>
+                        <a href="{{ url_for('main.category_page', category_name='Education') }}">Education</a>
+                        <a href="{{ url_for('main.category_page', category_name='Sports') }}">Sports</a>
+                        <a href="{{ url_for('main.category_page', category_name='Entertainment') }}">Entertainment</a>
+                        <a href="{{ url_for('main.category_page', category_name='Business') }}">Business</a>
+                        <a href="{{ url_for('main.category_page', category_name='Art') }}">Art</a>
+                        <a href="{{ url_for('main.category_page', category_name='Science') }}">Science</a>
+                    </div>
+                </div>
+                {% if current_user.is_authenticated %}
+                    <a href="{{ url_for('main.logout') }}" class="btn-nav">Logout</a>
+                {% else %}
+                    <a href="{{ url_for('main.login') }}" class="btn-nav">Login</a>
+                    <a href="{{ url_for('main.signup') }}" class="btn-nav">Sign Up</a>
+                {% endif %}
+            </div>
+        </div>
     </nav>
 
     <div class="container">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
-                    <div class="flash {{ category }}" id="Flash {{ category }}">{{ message }}</div>
+                    <div class="flash {{ category }}">{{ message }}</div>
                 {% endfor %}
             {% endif %}
         {% endwith %}
         {% block content %}{% endblock %}
     </div>
 
-    <!-- Create Post Modal -->
-    <div id="createPostModal" class="modal_create" style="display:none;">
-    <div class="modal-content-create">
-        <span class="close-btn-create" id="closeCreatePost">&times;</span>
-        <div id="createPostContent"></div>   
-    </div>
+    <!-- CREATE POST MODAL -->
+    <div id="createPostModal" class="create-modal" style="display:none;">
+        <div class="create-modal-content">
+            <span id="closeCreatePost" class="close">&times;</span>
+            <div id="createPostContent"></div>
+        </div>
     </div>
 
+    <script>
+        const CREATE_POST_URL = "{{ url_for('main.create_post') }}";
+    </script>
 </body>
 </html>
