--- a/app/templates/create_post.html
+++ b/app/templates/create_post.html
@@ -1,5 +1,3 @@
-<!-- {% extends "base.html" %}
-{% block content %} -->
 <div class="create-post-container">
     <h2 class="page-title">Create New Post</h2>
 
@@ -38,14 +36,14 @@
         </div>
 
         <div class="form-group">
-            {{ form.video.label }}<br>
+            {{ form.video.label }}
             {{ form.video(class="form-control-file") }}
         </div>
 
 
         <div class="form-group submit-btn">
-            {{ form.submit(class="btn-primary") }}
+            {{ form.submit(class="create_btn_primary") }}
         </div>
     </form>
 </div>
-<!-- {% endblock %} -->
+
