--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,34 +1,34 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="auth-container">
   <h2>Login</h2>
 
   <!-- Flash messages -->
-  {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-      <div class="flash-container">
-        {% for category, message in messages %}
-          <div class="flash-message {{ category }}">{{ message }}</div>
-        {% endfor %}
-      </div>
-    {% endif %}
-  {% endwith %}
+  {% with messages = get_flashed_messages(with_categories=true) %} {% if
+  messages %}
+  <div class="flash-container">
+    {% for category, message in messages %}
+    <div class="flash-message {{ category }}">{{ message }}</div>
+    {% endfor %}
+  </div>
+  {% endif %} {% endwith %}
 
   <form method="POST" action="{{ url_for('main.login') }}" id="loginForm">
     {{ form.hidden_tag() }}
     <div class="form-group">
-        {{ form.email.label }}<br>
-        {{ form.email(class="form-control") }}
+      {{ form.email.label }}<br />
+      {{ form.email(class="form-control") }}
     </div>
     <div class="form-group">
-        {{ form.password.label }}<br>
-        {{ form.password(class="form-control") }}
+      {{ form.password.label }}<br />
+      {{ form.password(class="form-control") }}
     </div>
     <div class="form-group checkbox">
-        {{ form.remember() }} {{ form.remember.label }}
+      {{ form.remember() }} {{ form.remember.label }}
     </div>
     <button type="submit" class="btn-primary">Login</button>
-    <p class="switch-link">Don’t have an account? <a href="{{ url_for('main.signup') }}">Sign up</a></p>
+    <p class="switch-link">
+      Don’t have an account? <a href="{{ url_for('main.signup') }}">Sign up</a>
+    </p>
   </form>
 </div>
 {% endblock %}
