--- a/app/templates/view_profile.html
+++ b/app/templates/view_profile.html
@@ -9,7 +9,6 @@
       <img src="{{ url_for('static', filename='uploads/profile_pics/' ~ user.profile_pic) }}" alt="Profile Picture">
     </div>
 
-    
     <div class="view_profile_details">
         <h1>{{ user.fullname }}</h1>
         <h2>@{{ user.username }}</h2>
@@ -17,7 +16,14 @@
         <p class="view_bio">{{ user.bio or "No bio yet." }}</p>
     </div>
 
-    <!-- <h3>Posts by {{ user.username }}</h3> -->
+    <!-- PROFILE-LEVEL FOLLOW/UNFOLLOW AJAX BUTTON -->
+    {% if current_user.is_authenticated and current_user != user %}
+        <button class="follow-btn {% if current_user.is_following(user) %}btn-danger{% else %}btn-primary{% endif %}" data-user-id="{{ user.id }}">
+            {% if current_user.is_following(user) %}Unfollow{% else %}Follow{% endif %}
+        </button>
+    {% endif %}
+    <p>{{ user.followers.count() }} Followers | {{ user.followed.count() }} Following</p>
+
     <!-- USER POSTS -->
     <div class="view_user_posts">
         <h3>Posts</h3>
@@ -25,61 +31,65 @@
         {% for post in posts %}
         <div class="post">
             <div class="post-header">
-            <img src="{{ url_for('static', filename='uploads/profile_pics/' ~ post.author.profile_pic) }}" class="avatar">
-            <div class="author-info">
-                <div class="full-date">
-                <h1 class="fullname">{{ post.author.fullname }}</h1>
-                <span class="full date" data-time="{{ post.date_posted.isoformat() }}"></span>
+                <img src="{{ url_for('static', filename='uploads/profile_pics/' ~ post.author.profile_pic) }}" class="avatar">
+                <div class="author-info">
+                    <div class="full-date">
+                        <h1 class="fullname">{{ post.author.fullname }}</h1>
+                        <span class="full date" data-time="{{ post.date_posted.isoformat() }}Z"></span>
+                        {% if current_user.is_authenticated and current_user != post.author %}
+                            <button class="btn follow-btn {% if current_user.is_following(post.author) %}btn-danger{% else %}btn-primary{% endif %}" data-user-id="{{ post.author.id }}">
+                                {% if current_user.is_following(post.author) %}Unfollow{% else %}Follow{% endif %}
+                            </button>
+                        {% endif %}
+                    </div>
+                    <a href="{{ url_for('main.view_profile', username=post.author.username) }}" class="username">@{{ post.author.username }}</a>
                 </div>
-                <a href="{{ url_for('main.view_profile', username=post.author.username) }}" class="username">@{{ post.author.username }}</a>
-            </div>
             </div>
 
             <a href="{{ url_for('main.view_post', post_id=post.id) }}" class="post-link">
-            <h3>{{ post.title }}</h3>
-            <p>{{ post.content[:200] }}{% if post.content|length > 200 %}...{% endif %}</p>
+                <h3>{{ post.title }}</h3>
+                <p>{{ post.content[:200] }}{% if post.content|length > 200 %}...{% endif %}</p>
 
-            {% if post.image %}
-                <img src="{{ url_for('static', filename='uploads/post_images/' ~ post.image) }}" class="post-image">
-            {% endif %}
+                {% if post.image %}
+                    <img src="{{ url_for('static', filename='uploads/post_images/' ~ post.image) }}" class="post-image">
+                {% endif %}
             </a>
 
             {% if post.video %}
             <video class="post-video" controls>
-            <source src="{{ url_for('static', filename='uploads/post_videos/' ~ post.video) }}" type="video/mp4">
-            Your browser does not support the video tag.
+                <source src="{{ url_for('static', filename='uploads/post_videos/' ~ post.video) }}" type="video/mp4">
+                Your browser does not support the video tag.
             </video>
             {% endif %}
 
             <div class="post-footer">
-            <div class="post-like-comment">
-                <button class="like-btn" data-post-id="{{ post.id }}">
-                    ❤️ <span id="like-count-{{ post.id }}">{{ post.likes|length }}</span>
-                </button>
+                <div class="post-like-comment">
+                    <button class="like-btn" data-post-id="{{ post.id }}">
+                        ❤️ <span id="like-count-{{ post.id }}">{{ post.likes|length }}</span>
+                    </button>
 
-                <a href="#" class="comment-btn" data-post-id="{{ post.id }}"><i class="fas fa-comment-dots"></i>
-                {{ post.comments|length }}</a>
+                    <a href="#" class="comment-btn" data-post-id="{{ post.id }}"><i class="fas fa-comment-dots"></i>
+                        {{ post.comments|length }}
+                    </a>
                 </div>
-            <!-- <span class="date" data-time="{{ post.date_posted.isoformat() }}"></span> -->
 
-            {% if current_user.is_authenticated and post.user_id == current_user.id %}
-            <form method="POST" action="{{ url_for('main.delete_post', post_id=post.id) }}" class="delete-post-form">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                <button type="button" class="delete" data-post-id="{{ post.id }}"><i class="fas fa-trash"></i></button>
-            </form>
+                {% if current_user.is_authenticated and post.user_id == current_user.id %}
+                <form method="POST" action="{{ url_for('main.delete_post', post_id=post.id) }}" class="delete-post-form">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                    <button type="button" class="delete" data-post-id="{{ post.id }}"><i class="fas fa-trash"></i></button>
+                </form>
 
-            <!-- CUSTOM CONFIRMATION MODAL -->
-            <div id="deleteConfirmModal" class="del-modal-overlay" style="display: none;">
-                <div class="del-modal-content">
-                <h3>Are you sure?</h3>
-                <p>This action cannot be undone.</p>
-                <div class="del-modal-buttons">
-                    <button id="confirmDeleteBtn">Yes, delete</button>
-                    <button id="cancelDeleteBtn">Cancel</button>
+                <div id="deleteConfirmModal" class="del-modal-overlay" style="display: none;">
+                    <div class="del-modal-content">
+                        <h3>Are you sure?</h3>
+                        <p>This action cannot be undone.</p>
+                        <div class="del-modal-buttons">
+                            <button id="confirmDeleteBtn">Yes, delete</button>
+                            <button id="cancelDeleteBtn">Cancel</button>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
-            {% endif %}
+                {% endif %}
             </div>
         </div>
         {% endfor %}
