--- a/app/static/style.css
+++ b/app/static/style.css
@@ -23,6 +23,7 @@
 
   /* Special */
   --overlay: rgba(0, 0, 0, 0.4);
+  --overlay-bg: rgba(255,255,255,0.4);
 
   --navbar-bg: #f9f6f6;
 
@@ -203,6 +204,7 @@
   --info: #38bdf8;
 
   --overlay: rgba(0, 0, 0, 0.7);
+  --overlay-bg: rgba(0,0,0,0.5);
 
   --navbar-bg: #1c1c1c;
   --nav-highlight: #ffb86c; 
@@ -345,8 +347,21 @@ body {
 }
 
 
+
+body {
+  opacity: 1;
+  transition: opacity 220ms ease;
+}
+
+body.page-loading {
+  opacity: 0;
+}
+
+
+
 /*  DARK MODE: Appearance Toggle */
 .appearance-setting {
+  width: 20%;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -570,7 +585,8 @@ input:checked + .slider:before {
   height: 100%;
   overflow: auto;
   backdrop-filter: blur(5px);
-  background-color: var(--bg); /* dark transparent background */
+  background-color: var(--overlay-bg); /* dark transparent background */
+  backdrop-filter: blur(4px);
   transition: opacity 0.3s ease;
 }
 
@@ -687,19 +703,20 @@ input:checked + .slider:before {
   display: none; /* shown only on mobile via media query */
   flex-direction: column;
   justify-content: space-between;
-  width: 28px;
-  height: 22px;
+  width: 55px;
+  height: 45px;
   cursor: pointer;
   z-index: 1002;
 }
 
 .hamburger span {
   display: block;
-  height: 3px;
+  height: 10px;
   width: 100%;
   background-color: var(--text);
   border-radius: 2px;
   transition: 0.3s;
+
 }
 
 /* Hamburger active animation */
@@ -720,11 +737,13 @@ input:checked + .slider:before {
   left: -100%;
   width: 100%;
   height: 100%;
-  background-color: var(--bg);
+  background-color: var(--overlay-bg);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content:space-between;
   transition: left 0.3s ease;
   z-index: 1000;
 }
@@ -1558,11 +1577,12 @@ textarea.form-control.textarea {
 }
 
 /* --- Header --- */
-h2 {
+.homepage h2 {
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 1rem;
   padding-bottom: 0.5rem;
+  text-align: center;
 }
 
 /* --- Post Card --- */
@@ -1747,18 +1767,6 @@ h2 {
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
-
-
-/* .like-btn {
-  text-decoration: none;
-  color: #e0245e;
-  font-weight: 600;
-  transition: 0.2s;
-}
-
-.like-btn:hover {
-  color: #f91880;
-} */
 
 .date {
   position: relative;
@@ -2057,13 +2065,13 @@ button[type="submit"]:hover {
 
 /* Delete */
 .delete {
-  /* background-color: none !important; */
+  background: transparent;
   color: var(--text) !important;
   border: none;
   padding: 8px 14px;
   border-radius: 6px;
   cursor: pointer;
-  transition: background 0.5s ease;
+  transition: background 0.2s ease;
 }
 
 .delete:hover {
@@ -2079,10 +2087,17 @@ button[type="submit"]:hover {
   align-items: center;
   justify-content: center;
   z-index: 9999;
+  opacity: 0;
+  transition: opacity .2s ease;
+}
+
+.del-modal-overlay.show {
+  display: flex;
+  opacity: 1;
 }
 
 .del-modal-content {
-  background: var(--bg);
+  background: var(--card);
   color: var(--text);
   padding: 1.5rem;
   border-radius: 12px;
@@ -2117,14 +2132,9 @@ button[type="submit"]:hover {
   color: var(--text);
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; transform: scale(0.9); }
-  to { opacity: 1; transform: scale(1); }
-}
-
-@keyframes fadeOut {
-  from { opacity: 1; transform: scale(1); }
-  to { opacity: 0; transform: scale(0.9); }
+/* prevents background scroll when modal is open */
+body.modal-open {
+  overflow: hidden;
 }
 
 .comment_form textarea {
@@ -2259,7 +2269,6 @@ form input[type="submit"]:hover {
 .view_profile_card {
   position: relative;
   border-radius: 15px;
-  /* box-shadow: 0 0 15px rgba(0,0,0,0.1); */
   overflow: hidden;
   margin-bottom: 30px;
 }
