--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -5,33 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% if title %}{{ title }}{% else %}CoolStack{% endif %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='responsive.css') }}">
   <script defer src="{{ url_for('static', filename='script.js') }}"></script>
   <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico')}}" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div class="landing_container">
-    <div class="left-section">
-      <img src="{{ url_for('static', filename='img/coolstack_dark.png') }}"
-        class="landing-logo logo-for-light"
-        alt="CoolStack Dark Logo">
+    <div class="landing_container">
+        <div class="left-section">
+            <img src="{{ url_for('static', filename='img/coolstack_dark.png') }}"
+                class="landing-logo logo-for-light"
+                alt="CoolStack Dark Logo">
 
-      <!-- Dark-theme background → use light logo -->
-      <img src="{{ url_for('static', filename='img/Coolstack.png') }}"
-        class="landing-logo logo-for-dark"
-        alt="CoolStack Light Logo">
-    </div>
-
-    <div class="right-section">
-      <div class="content">
-        <h1>Join Now</h1>
-        <div class="landing_buttons">
-          <a href="{{ url_for('main.login') }}" class="login_btn">Login</a>
-          <a href="{{ url_for('main.signup') }}" class="signup_btn">Sign Up</a>
+            <!-- Dark-theme background → use light logo -->
+            <img src="{{ url_for('static', filename='img/Coolstack.png') }}"
+                class="landing-logo logo-for-dark"
+                alt="CoolStack Light Logo">
         </div>
-      </div>
+
+        <div class="right-section">
+            <div class="content">
+                <h1>Join Now</h1>
+                <div class="landing_buttons">
+                <a href="{{ url_for('main.login') }}" class="login_btn">Login</a>
+                <a href="{{ url_for('main.signup') }}" class="signup_btn">Sign Up</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
   <!-- LOGIN MODAL -->
     <div id="loginModal" class="login_modal">
